# localsearch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  BUGS.md  Cargo.toml  LICENSE  README.md  algorithm.md  state_update_order.md
.plan/: 2026-07-18-2213-fix-logistic-relative-epsilon.md  2026-07-20-1343-fix-update-frequency-nonzero.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  code_style_conventions.md  design_patterns.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  usage_quick_reference.md
.todos/: 2026-07-20-1343-fix-update-frequency-nonzero.md
examples/: quadratic_model.rs  tsp_model.rs
examples/tsp_berlin52/: opt_route
src/: callback.rs  counter.rs  error.rs  lib.rs  model.rs  optim.rs  tests.rs  time_wrapper.rs  utils.rs
src/optim/: adaptive_annealing.rs  asa.rs  base.rs  callback.rs  epsilon_greedy.rs  generic.rs  great_deluge.rs  hill_climbing.rs  logistic_annealing.rs  metropolis.rs  parallel_tempering.rs  population_annealing.rs  random.rs  relative_annealing.rs  simulated_annealing.rs  tabu_search.rs  tsallis.rs
src/tests/: test_adaptive_annealing.rs  test_epsilon_greedy.rs  test_great_deluge.rs  test_hill_climbing.rs  test_logistic_annealing.rs  test_metropolis.rs  test_parallel_tempering.rs  test_population_annealing.rs  test_relative_annealing.rs  test_simulated_annealing.rs  test_tabu_search.rs  test_trait_object.rs  test_tsallis.rs
tests/: population_annealing_test.rs
