[package]
name = "localsearch"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]
description = "A Library of Local Search based Metaheuristics"
keywords = ["optimization", "metaheuristics", "localsearch"]
categories = ["algorithms"]
repository = "https://github.com/lucidfrontier45/localsearch"
license-file = "LICENSE"
readme = "README.md"
version = "0.21.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
ordered-float = "5.0.0"
rayon = "1.10.0"
auto_impl = "1.2.0"
anyhow = "1.0.86"

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = "1.1.0"

[dev-dependencies]
approx = "0.5.1"
indicatif = "0.17.8"

[lib]
name = "localsearch"
doctest = false
