[package]
name = "localsearch"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]
description = "A Library of Local Search based Metaheuristics"
keywords = ["optimization", "metaheuristics", "localsearch"]
categories = ["algorithms"]
repository = "https://github.com/lucidfrontier45/localsearch"
license-file = "LICENSE"
readme = "README.md"
version = "0.24.0"
edition = "2024"
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"
ordered-float = "5.1.0"
rayon = "1.11.0"
auto_impl = "1.3.0"
thiserror = "2.0.18"

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = "1.1.0"

[dev-dependencies]
approx = "0.5.1"
indicatif = "0.18.4"
anyhow = "1.0.101"

[lib]
name = "localsearch"
doctest = false
